# ff-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: agent_loop_example.py  anthropic_example.py  local_example.py  openai_example.py
src/ff_kit/: __init__.py  cli.py  dispatch.py  executor.py
src/ff_kit/core/: __init__.py  add_subtitles.py  clip.py  extract_audio.py  merge.py  transcode.py
src/ff_kit/mcp/: __main__.py  server.py
src/ff_kit/schemas/: __init__.py  anthropic.py  openai.py
tests/: test_cli.py  test_core.py  test_mcp.py  test_schemas.py
